@@ -1,14 +1,16 @@
 package com.dicedicebaby.service;
 
-import com.dicedicebaby.dto.response.CardResponseDTO;
-import com.dicedicebaby.dto.response.DiceResponseDTO;
-import com.dicedicebaby.dto.response.GameSetupResponseDTO;
-import com.dicedicebaby.entity.DiceEntity;
-import com.dicedicebaby.entity.DiceSetEntity;
+import com.dicedicebaby.config.Constant;
+import com.dicedicebaby.dto.response.*;
+import com.dicedicebaby.entity.*;
+import com.dicedicebaby.mapper.GameMapper;
 import com.dicedicebaby.repository.CardRepository;
-import com.dicedicebaby.repository.DiceSetRepository;
+import com.dicedicebaby.repository.GameRepository;
+import com.dicedicebaby.repository.PlayerRepository;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,38 +18,109 @@ import org.springframework.transaction.annotation.Transactional;
 public class GameSetupService {
   // region Attributes
   private final CardRepository cardRepository;
-  private final DiceSetRepository diceSetRepository;
+  private final PlayerRepository playerRepository;
+  private final GameRepository gameRepository;
+  private final GameMapper gameMapper;
 
   // endregion
 
   // region Constructor
-  public GameSetupService(CardRepository cardRepository, DiceSetRepository diceSetRepository) {
+  public GameSetupService(
+      CardRepository cardRepository,
+      PlayerRepository playerRepository,
+      GameRepository gameRepository,
+      GameMapper gameMapper) {
     this.cardRepository = cardRepository;
-    this.diceSetRepository = diceSetRepository;
+    this.playerRepository = playerRepository;
+    this.gameRepository = gameRepository;
+    this.gameMapper = gameMapper;
   }
 
   // endregion
 
   // region Methods
   @Transactional
-  public GameSetupResponseDTO setupNewGame() {
-    // Get board game with random cards
-    List<CardResponseDTO> board =
-        cardRepository.findRandomCards().stream()
+  public GameResponseDTO setupNewGame(String existingCookie) {
+    // Create a game
+    GameEntity game = new GameEntity();
+
+    game = gameRepository.saveAndFlush(game);
+
+    // Get players from cookie in game
+    List<PlayerEntity> players = extractPlayersFromCookie(existingCookie);
+
+    // Set game in every players
+    for (PlayerEntity player : players) {
+      player.setGame(game);
+    }
+
+    game.setPlayers(players);
+
+    // Set current player
+    if (!players.isEmpty()) {
+      game.setCurrentPlayer(players.getFirst());
+    }
+
+    // Set a board with random card in game
+    game.setBoard(createBoard(game));
+
+    // Set a dice set in game
+    game.setDiceSet(createDiceSet(game));
+
+    // Save game in base
+    gameRepository.save(game);
+
+    return gameMapper.mapToGameResponseDTO(game);
+  }
+
+  private List<PlayerEntity> extractPlayersFromCookie(String existingCookie) {
+    // Get tokens from cookie
+    List<String> tokens = new ArrayList<>(Arrays.asList(existingCookie.split(Constant.SEPARATOR)));
+
+    // Create players list to return
+    List<PlayerEntity> players = new ArrayList<>();
+
+    // Get players from tokens
+    for (String token : tokens) {
+      players.add(playerRepository.findByCurrentToken(token));
+    }
+
+    // Return players
+    return players;
+  }
+
+  private BoardEntity createBoard(GameEntity game) {
+    BoardEntity board = new BoardEntity();
+    board.setGame(game);
+
+    // Get random card from official list
+    List<CardEntity> randomCards = cardRepository.findRandomCards();
+
+    // Transform them in game cards
+    List<GameCardEntity> gameCards =
+        randomCards.stream()
             .map(
-                card ->
-                    new CardResponseDTO(
-                        card.getId(),
-                        card.getCombination(),
-                        card.getColor(),
-                        card.getPointLvl1(),
-                        card.getPointLvl2()))
-            .toList();
+                card -> {
+                  GameCardEntity gameCard = new GameCardEntity();
+                  gameCard.setCard(card);
+                  gameCard.setBoard(board);
+                  gameCard.setOwnerPointLvl1(null);
+                  gameCard.setOwnerPointLvl2(null);
+                  return gameCard;
+                })
+            .collect(Collectors.toList());
 
-    // Get dice set
+    // Link game cards to board
+    board.setGameCards(gameCards);
+
+    return board;
+  }
+
+  private DiceSetEntity createDiceSet(GameEntity game) {
     DiceSetEntity diceSet = new DiceSetEntity();
-    List<DiceEntity> dices = new ArrayList<>();
+    diceSet.setGame(game);
 
+    List<DiceEntity> dices = new ArrayList<>();
     for (int i = 0; i < 5; i++) {
       DiceEntity dice = new DiceEntity();
       dice.setValue(1);
@@ -55,18 +128,9 @@ public class GameSetupService {
       dice.setDiceSet(diceSet);
       dices.add(dice);
     }
-
     diceSet.setDices(dices);
-    diceSetRepository.save(diceSet);
 
-    return new GameSetupResponseDTO(
-        board,
-        diceSet.getId(),
-        diceSet.getDices().stream().map(this::mapToDiceResponseDTO).toList());
-  }
-
-  private DiceResponseDTO mapToDiceResponseDTO(DiceEntity dice) {
-    return new DiceResponseDTO(dice.getId(), dice.getValue(), dice.isKept());
+    return diceSet;
   }
   // endregion
 }
